// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin 1`] = `
<ContextNavBar
  height={65}
  id="context-navigation"
>
  <div
    className="navbar-context-header"
  >
    <h1
      className="display-inline-block"
    >
      <OrganizationIcon
        className="little-spacer-right"
      />
      <Link
        className="link-base-color link-no-underline"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo"
      >
        <strong>
          Foo
        </strong>
      </Link>
    </h1>
  </div>
  <div
    className="navbar-context-meta"
  />
  <NavBarTabs>
    <li>
      <Link
        className=""
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/projects"
      >
        projects.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/organizations/foo/issues",
            "query": Object {
              "resolved": "false",
            },
          }
        }
      >
        issues.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/members"
      >
        organization.members.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/quality_profiles"
      >
        quality_profiles.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/rules"
      >
        coding_rules.page
      </Link>
    </li>
    <li
      className="dropdown"
    >
      <a
        className="dropdown-toggle is-admin"
        data-toggle="dropdown"
        href="#"
      >
        layout.settings
         
        <i
          className="icon-dropdown"
        />
      </a>
      <ul
        className="dropdown-menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/groups"
          >
            user_groups.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/permissions"
          >
            permissions.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/permission_templates"
          >
            permission_templates
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/projects_management"
          >
            projects_management
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/edit"
          >
            edit
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/delete"
          >
            delete
          </Link>
        </li>
      </ul>
    </li>
  </NavBarTabs>
</ContextNavBar>
`;

exports[`regular user 1`] = `
<ContextNavBar
  height={65}
  id="context-navigation"
>
  <div
    className="navbar-context-header"
  >
    <h1
      className="display-inline-block"
    >
      <OrganizationIcon
        className="little-spacer-right"
      />
      <Link
        className="link-base-color link-no-underline"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo"
      >
        <strong>
          Foo
        </strong>
      </Link>
    </h1>
  </div>
  <div
    className="navbar-context-meta"
  />
  <NavBarTabs>
    <li>
      <Link
        className=""
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/projects"
      >
        projects.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/organizations/foo/issues",
            "query": Object {
              "resolved": "false",
            },
          }
        }
      >
        issues.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/members"
      >
        organization.members.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/quality_profiles"
      >
        quality_profiles.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/rules"
      >
        coding_rules.page
      </Link>
    </li>
  </NavBarTabs>
</ContextNavBar>
`;

exports[`undeletable org 1`] = `
<ContextNavBar
  height={65}
  id="context-navigation"
>
  <div
    className="navbar-context-header"
  >
    <h1
      className="display-inline-block"
    >
      <OrganizationIcon
        className="little-spacer-right"
      />
      <Link
        className="link-base-color link-no-underline"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo"
      >
        <strong>
          Foo
        </strong>
      </Link>
    </h1>
  </div>
  <div
    className="navbar-context-meta"
  />
  <NavBarTabs>
    <li>
      <Link
        className=""
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/projects"
      >
        projects.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to={
          Object {
            "pathname": "/organizations/foo/issues",
            "query": Object {
              "resolved": "false",
            },
          }
        }
      >
        issues.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/members"
      >
        organization.members.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/quality_profiles"
      >
        quality_profiles.page
      </Link>
    </li>
    <li>
      <Link
        activeClassName="active"
        onlyActiveOnIndex={false}
        style={Object {}}
        to="/organizations/foo/rules"
      >
        coding_rules.page
      </Link>
    </li>
    <li
      className="dropdown"
    >
      <a
        className="dropdown-toggle is-admin"
        data-toggle="dropdown"
        href="#"
      >
        layout.settings
         
        <i
          className="icon-dropdown"
        />
      </a>
      <ul
        className="dropdown-menu"
      >
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/groups"
          >
            user_groups.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/permissions"
          >
            permissions.page
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/permission_templates"
          >
            permission_templates
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/projects_management"
          >
            projects_management
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/organizations/foo/edit"
          >
            edit
          </Link>
        </li>
      </ul>
    </li>
  </NavBarTabs>
</ContextNavBar>
`;
